# CNN_Library

./: CMakeLists.txt
pytorch/: AlphaZero.h  CMakeLists.txt  MCTSLearn.h  Node.h  TicTacToe.h  TicTacToeModel.h  TicTacToeUltimateModel.h  main.cpp
src/: BatchNorm2d.h  BatchNormalizationLayer.h  CMakeLists.txt  ConvolutionalLayer.cpp  ConvolutionalLayer.h  FlattenLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  Layer.h  LinearLayer.h  LossFunctions.h  Matrix.h  MaxPoolingLayer.h  PoolingLayer.cpp  PoolingLayer.h  ReLULayer.cpp  ReLULayer.h  ResBlock.h  ResNet.h  Sequential.h  SoftMaxLayer.h  Tanh.h  Tensor4D.cpp  Tensor4D.h  TicTacToeModel.h  Vector.h  main.cpp  merged
test/: CMakeLists.txt  test_batch_norm_2d_layer.cpp  test_convolutional_layer.cpp  test_flatten.cpp  test_fully_connected.cpp  test_layer.cpp  test_linear_layer.cpp  test_loss_fuctions.cpp  test_matrix.cpp  test_matrix_convolutional.cpp  test_max_pooling.cpp  test_relu_layer.cpp  test_sequential.cpp  test_softmax.cpp  test_tanh_layer.cpp  test_tensor4d.cpp  test_vector.cpp
